# the_game

./: CMakeLists.txt  README.md
src/: game.c  game.h  main.c
